css/style.css
/* ... */
.burger span {
  top: 15px;
}

.burger:after {
  top: 26px;
}

/* Hover */
.burger:hover:before {
  top: 7px;
}

.burger:hover:after {
  top: 23px;
}

/* Click */
.burger.active span {
  opacity: 0;
}

.burger.active:before,
.burger.active:after {
  top: 40%;
}

.burger.active:before {
  -webkit-transform: rotate(45deg);
  -moz-transform: rotate(45deg);
  filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=5);
  /*for IE*/
}

.burger.active:after {
  -webkit-transform: rotate(-45deg);
  -moz-transform: rotate(-45deg);
  filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=-5);
  /*for IE*/
}

.burger:focus {
  outline: none;
}

html,
body {
  overflow-x: hidden;
}

body {
  font-family: var(--bs-font-body);
  font-weight: 500;
  font-size: 14px;
  color: var(--bs-secondary);
  line-height: 1.6;
}

h1,
.h1,
h2,
.h2,
h3,
.h3,
h4,
.h4,
h5,
.h5,
.logo {
  font-family: var(--bs-font-header);
}

h1,
.h1,
h2,
.h2,
h3,
.h3,
h4,
.h4,
h5,
.h5 {
  color: #000;
}

a {
  -webkit-transition: 0.3s all ease;
  -o-transition: 0.3s all ease;
  transition: 0.3s all ease;
  text-decoration: none;
}

.btn {
  padding: 12px 20px;
  border-radius: 0;
}
.btn.btn-primary {
  background-color: var(--bs-mbarc-3);
  color: #fff;
  border: 2px solid transparent;
  border-radius: 8px;
}
.btn.btn-primary:hover {
  /*border: 2px solid #000;*/
  background-color: var(--bs-mbarc-3);

  color: #000;
}

#overlayer {
  width: 100%;
  height: 100%;
  position: fixed;
  z-index: 7100;
  background: #fff;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.loader {
  z-index: 7700;
  position: fixed;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
}

.hero-2 {
  background-size: cover;
  background-position: center center;
  background-repeat: no-repeat;
  position: relative;
}
.hero-2.overlay:before {
  content: "";
  position: absolute;
  top: 0;
  right: 0;
  left: 0;
  bottom: 0;
  background: rgba(0, 0, 0, 0.1);
  z-index: 1;
}
.hero-2 > .container {
  position: relative;
  z-index: 2;
}
.hero-2,
.hero-2 > .container > .row {
  height: 100vh;
  min-height: 670px;
}
.hero-2 h1,
.hero-2 .h1 {
  font-size: 50px;
  color: #fff;
  text-transform: uppercase;
  font-weight: normal;
}
@media (max-width: 767.98px) {
  .hero-2 h1,
  .hero-2 .h1 {
    font-size: 30px;
  }
}

.hero-2 .intro-desc {
  position: absolute;
  bottom: 20px;
  left: 20px;
  max-width: 500px;
  font-size: 40px;
}
@media (max-width: 767.98px) {
  .hero-2 .intro-desc {
    left: 20px;
  }
}
.hero-2 .intro-desc p {
  color: rgba(255, 255, 255, 1);
}

.hero-2 .intro-desc-left {
  position: absolute;
  bottom: 20px;
  left: 20px;
  max-width: 40rem;
  font-size: 40px;
}
@media (max-width: 767.98px) {
  .hero-2 .intro-desc-left {
    left: 20px;
  }
}
.hero-2 .intro-desc-left p {
  color: rgba(255, 255, 255, 1);
  background: rgba(0, 0, 0, 0.3);
  padding: 10px;
}

.hero-2 .intro-desc-right {
  padding-left: 15rem;
  padding-top: 0rem;
  bottom: 20px;
  left: 20px;
  max-width: 46rem;
  font-size: 45px;
}
@media (max-width: 767.98px) {
  .hero-2 .intro-desc-right {
    left: 20px;
  }
}
.hero-2 .intro-desc-right p {
  color: rgba(255, 255, 255, 1);
  background: rgba(0, 0, 0, 0.3);
  padding: 10px;
}

.play-vid .play {
  display: inline-block;
  width: 80px;
  height: 80px;
  border-radius: 50%;
  border: 1px solid rgba(255, 255, 255, 0.2);
  position: relative;
}
.play-vid .play span {
  position: absolute;
  top: 50%;
  left: 52%;
  -webkit-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  color: #fff;
  font-size: 18px;
}
.play-vid .play:hover {
  border: 1px solid rgba(255, 255, 255, 0.7);
}

.line {
  width: 50px;
  height: 1px;
  background: #fff;
  margin-bottom: 10px;
}

.sec-1 .heading {
  margin-bottom: 30px;
  font-weight: normal;
  position: relative;
  display: inline-block;
}
@media (max-width: 767.98px) {
  .sec-1 .heading {
    font-size: 30px;
    margin-bottom: 30px;
  }
}
.sec-1 .heading:after {
  content: "";
  position: absolute;
  height: 1px;
  width: 300%;
  background: #000;
  right: 0;
  bottom: 0;
}

.sec-1 .img-r {
  position: relative;
  right: -100px;
}
@media (max-width: 767.98px) {
  .sec-1 .img-r {
    right: auto !important;
  }
}

.section {
  padding: 4rem 0;
}
.section .heading {
  font-size: 30px;
  font-weight: bold;
  text-transform: uppercase;
}
@media (max-width: 767.98px) {
  .section {
    padding: 2rem 0;
  }
}

.sec-2 .heading {
  margin-bottom: 30px;
  position: relative;
  text-transform: uppercase;
  font-size: 30px;
  font-weight: normal;
  padding-bottom: 5px;
  display: inline-block;
}
@media (max-width: 767.98px) {
  .sec-2 .heading {
    font-size: 24px;
    margin-bottom: 30px;
  }
}
.sec-2 .heading:after {
  content: "";
  position: absolute;
  height: 1px;
  width: 300%;
  background: #000;
  left: 0;
  bottom: 0;
}

.sec-3 .heading {
  margin-bottom: 60px;
  position: relative;
  text-transform: uppercase;
  font-size: 30px;
  font-weight: bold;
  padding-bottom: 5px;
  display: inline-block;
}
@media (max-width: 767.98px) {
  .sec-3 .heading {
    font-size: 24px;
    margin-bottom: 30px;
  }
}
.sec-3 .heading:before {
  content: "";
  position: absolute;
  height: 1px;
  width: 300%;
  background: #000;
  right: 0;
  bottom: 0;
}

.accordion-1 .accordion-item button {
  background-color: transparent !important;
  color: #000;
  outline: none;
  -webkit-box-shadow: none;
  box-shadow: none;
  border-color: rgba(0, 0, 0, 0.1);
  border-bottom: none;
  text-transform: uppercase;
  font-size: 12px;
  padding-left: 0;
  padding-right: 0;
  font-weight: bold;
  color: var(--bs-primary);
}
.accordion-1 .accordion-item button:after {
  -webkit-filter: brightness(0.5) sepia(1) hue-rotate(29deg) saturate(6);
  filter: brightness(0.5) sepia(1) hue-rotate(29deg) saturate(6);
}
/* ... */

